--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.1'
     testImplementation 'org.jmolecules.integrations:jmolecules-archunit:0.28.0'
 
+    testImplementation 'org.instancio:instancio-junit:5.5.0'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
